--- a/rootdir/init.qcom.power.rc
+++ b/rootdir/init.qcom.power.rc
@@ -108,6 +108,7 @@ on property:init.svc.bootanim=stopped
     write /sys/devices/system/cpu/cpufreq/interactive/timer_rate 30000
     write /sys/devices/system/cpu/cpufreq/interactive/timer_slack 20000
     write /sys/class/kgsl/kgsl-3d0/devfreq/governor "msm-adreno-tz"
+    write /sys/class/devfreq/qcom,cpubw.40/governor "cpubw_hwmon"
     write /dev/cpuctl/cpu.notify_on_migrate 1
 
     # Enable thermal
@@ -131,8 +132,8 @@ on property:init.svc.bootanim=stopped
     chmod 0644 /sys/devices/system/cpu/cpufreq/interactive/hispeed_freq
     chown system system /sys/devices/system/cpu/cpufreq/interactive/io_is_busy
     chmod 0644 /sys/devices/system/cpu/cpufreq/interactive/io_is_busy
-    chown system system /sys/devices/system/cpu/cpufreq/interactive/max_freq_hysteresis
-    chmod 0644 /sys/devices/system/cpu/cpufreq/interactive/max_freq_hysteresis
+    chown system system /sys/devices/system/cpu/cpufreq/interactive/sampling_down_factor
+    chmod 0644 /sys/devices/system/cpu/cpufreq/interactive/sampling_down_factor
     chown system system /sys/devices/system/cpu/cpufreq/interactive/min_sample_time
     chmod 0644 /sys/devices/system/cpu/cpufreq/interactive/min_sample_time
     chown system system /sys/devices/system/cpu/cpufreq/interactive/target_loads
@@ -141,10 +142,6 @@ on property:init.svc.bootanim=stopped
     chmod 0644 /sys/devices/system/cpu/cpufreq/interactive/timer_rate
     chown system system /sys/devices/system/cpu/cpufreq/interactive/timer_slack
     chmod 0644 /sys/devices/system/cpu/cpufreq/interactive/timer_slack
-    chown system system /sys/devices/system/cpu/cpufreq/interactive/use_migration_notif
-    chmod 0644 /sys/devices/system/cpu/cpufreq/interactive/use_migration_notif
-    chown system system /sys/devices/system/cpu/cpufreq/interactive/use_sched_load
-    chmod 0644 /sys/devices/system/cpu/cpufreq/interactive/use_sched_load
     chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq
     chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq
 
